re-enable physical suppression of nsc.interactive from the embedded jar scala-compiler.jar (maven-scala-plugin use the jar but not the Export-Package to compile)

--- a/org.scala-ide.scala.compiler/pom.xml
+++ b/org.scala-ide.scala.compiler/pom.xml
@@ -99,7 +99,7 @@
           </execution>
         </executions>
       </plugin>
-      <!--plugin>
+      <plugin>
         <artifactId>maven-antrun-plugin</artifactId>
         <version>1.6</version>
         <executions>
@@ -119,7 +119,7 @@
             </goals>
           </execution>
         </executions>
-      </plugin-->
+      </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>properties-maven-plugin</artifactId>
