--- a/org.scala-ide.scala.library/pom.xml
+++ b/org.scala-ide.scala.library/pom.xml
@@ -136,6 +136,7 @@
             <Bundle-SymbolicName>org.scala-ide.scala.library</Bundle-SymbolicName>
             <Bundle-Name>Scala Library for Eclipse</Bundle-Name>
             <Bundle-Version>${version.number}-${patch.level}</Bundle-Version>
+            <Bundle-Vendor>scala-ide.org</Bundle-Vendor>
             <Embed-Dependency>*;scope=compile|runtime;inline=false</Embed-Dependency>
             <_exportcontents>scala.*;version=${version.number}</_exportcontents>
             <Embed-Directory>lib</Embed-Directory>
