--- a/org.scala-ide.sdt.core/build.properties
+++ b/org.scala-ide.sdt.core/build.properties
@@ -1,9 +1,12 @@
 source.. = src/
 output.. = target/classes/
 bin.includes = META-INF/,\
-	.,\
-	docs/,\
-	icons/,\
-	plugin.xml,\
-    toc.xml,\
-    templates/
+  .,\
+  docs/,\
+  icons/,\
+  plugin.xml,\
+  toc.xml,\
+  license.html,\
+  about.ini,\
+  about.png,\
+  templates/
