--- a/org.scala-ide.sdt.aspects/pom.xml
+++ b/org.scala-ide.sdt.aspects/pom.xml
@@ -15,7 +15,7 @@
     <dependency>
       <groupId>org.aspectj</groupId>
       <artifactId>aspectjrt</artifactId>
-      <version>1.6.9</version>
+      <version>1.6.10</version>
     </dependency>
   </dependencies>
   <build>
@@ -49,6 +49,7 @@
             <configuration>
               <source>1.5</source>
               <target>1.5</target>
+              <complianceLevel>1.5</complianceLevel>
               <aspectDirectory>src</aspectDirectory>
               <Xlint>ignore</Xlint>
               <Xreweavable>true</Xreweavable>
