enhance implicit annotations display and configuration (like regular annotations)

--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -273,9 +273,36 @@
          markerType="org.scala-ide.sdt.core.problem"
          markerSeverity="0">
       </type>
+      <type
+         name="scala.tools.eclipse.ui.semantic.highlighting.implicitConversionsOrArgsAnnotation"
+         super="org.eclipse.ui.workbench.texteditor.info"
+         >
+      </type>
    </extension>
-
-    <extension
+   <extension
+         point="org.eclipse.ui.editors.markerAnnotationSpecification">
+     <specification
+          annotationType="scala.tools.eclipse.ui.semantic.highlighting.implicitConversionsOrArgsAnnotation"
+          colorPreferenceKey="scala.tools.eclipse.ui.preferences.implicit.color"
+          colorPreferenceValue="0,255,0"
+          contributesToHeader="true"
+          includeOnPreferencePage="true"
+          icon="icons/full/elcl16/implicit_co.gif"
+          label="Scala Implicit"
+          overviewRulerPreferenceKey="scala.tools.eclipse.ui.preferences.implicit.rulers.overview"
+          overviewRulerPreferenceValue="true"
+          presentationLayer="0"
+          symbolicIcon="info"
+          textPreferenceKey="scala.tools.eclipse.ui.preferences.implicit.text"
+          textPreferenceValue="true"
+          textStylePreferenceKey="scala.tools.eclipse.ui.preferences.implicit.textStylePreference"
+          textStylePreferenceValue="SQUIGGLES"
+          verticalRulerPreferenceKey="scala.tools.eclipse.ui.preferences.implicit.rulers.vertical"
+          verticalRulerPreferenceValue="true">
+     </specification>
+   </extension>
+    
+   <extension
          point="org.eclipse.jdt.core.classpathContainerInitializer">
       <classpathContainerInitializer
             class="scala.tools.eclipse.ScalaCompilerClasspathContainerInitializer"
