Added user-friendly name for "scala.tools.eclipse.scalaEditorScope" (cherry-picking from commit 43a524baf7f00241dcfd40a0924089d6c4880488) Temp refactoring to diagnose NPE (cherry-picking from commit caf4d8c92d19ffb78f6acf86f04e723a7df8decb) Diagnostics dialog box, first cut (cherry-picking from commit 60c238531a03d7c90e6dac151e13685de4ca6372)

--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -795,7 +795,7 @@
 </extension>
 
    <extension point="org.eclipse.ui.contexts">
-     <context name="scala.tools.eclipse.scalaEditorScope"
+     <context name="Scala Editor Scope"
               description="Scala source file editor"
               parentId="org.eclipse.jdt.ui.javaEditorScope"
               id="scala.tools.eclipse.scalaEditorScope" />
@@ -878,5 +878,12 @@
              type="__dftl_partition_content_type">
        </partition>
     </javaCompletionProposalComputer>
+ </extension>
+ <extension
+       point="org.eclipse.ui.editors.documentProviders">
+    <provider
+          class="provider.Provider1"
+          id="org.scala-ide.sdt.core.provider1">
+    </provider>
  </extension>
 </plugin>
