--- a/org.scala-ide.scala.compiler/pom.xml
+++ b/org.scala-ide.scala.compiler/pom.xml
@@ -128,7 +128,7 @@
             <Embed-Directory>lib</Embed-Directory>
             <Embed-StripVersion>true</Embed-StripVersion>
             <Include-Resource>lib=${project.build.directory}/lib</Include-Resource>
-            <Import-Package>!jline.*,!sun.misc,*</Import-Package>
+            <Import-Package>!scala.tools.jline.*,!jline.*,!sun.misc,*</Import-Package>
           </instructions>
         </configuration>
       </plugin>
