--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -795,7 +795,7 @@
 </extension>
 
    <extension point="org.eclipse.ui.contexts">
-     <context name="Scala Editor Scope"
+     <context name="scala.tools.eclipse.scalaEditorScope"
               description="Scala source file editor"
               parentId="org.eclipse.jdt.ui.javaEditorScope"
               id="scala.tools.eclipse.scalaEditorScope" />
@@ -878,12 +878,5 @@
              type="__dftl_partition_content_type">
        </partition>
     </javaCompletionProposalComputer>
- </extension>
- <extension
-       point="org.eclipse.ui.editors.documentProviders">
-    <provider
-          class="provider.Provider1"
-          id="org.scala-ide.sdt.core.provider1">
-    </provider>
  </extension>
 </plugin>
