--- a/org.scala-ide.build/pom.xml
+++ b/org.scala-ide.build/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.scala-ide</groupId>
   <artifactId>scala-ide-for-eclipse</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>0.7.0</version>
   <name>The Scala IDE for Eclipse</name>
   <packaging>pom</packaging>
 
