--- a/org.scala-ide.sdt.core/pom.xml
+++ b/org.scala-ide.sdt.core/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.scala-ide</groupId>
     <artifactId>scala-ide-for-eclipse</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>0.7.0</version>
     <relativePath>../org.scala-ide.build/pom.xml</relativePath>
   </parent>
   <artifactId>org.scala-ide.sdt.core</artifactId>
