--- a/ch.epfl.lamp.sdt/pom.xml
+++ b/ch.epfl.lamp.sdt/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.scala-ide</groupId>
     <artifactId>scala-ide-for-eclipse</artifactId>
-    <version>0.7.0</version>
+    <version>0.8.0-SNAPSHOT</version>
     <relativePath>../org.scala-ide.build/pom.xml</relativePath>
   </parent>
   <artifactId>ch.epfl.lamp.sdt</artifactId>
