Diagnostics "dialog", first cut. Checks for JDT weaving enabled. To run, right-click on project, and select "run setup diagnostics" from the Scala submenu.

--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -523,6 +523,31 @@
          </visibility>
       </objectContribution>
 
+      <objectContribution
+        id="org.scala-ide.sdt.ui.diagnostics"
+        objectClass="org.eclipse.jdt.core.IJavaElement">
+        <action
+          class="scala.tools.eclipse.diagnostic.RunDiagnosticAction"
+          enablesFor="1"
+          menubarPath="org.scala-ide.sdt.core.popupMenu/content"
+          id="org.scala-ide.sdt.ui.runDiag"
+          label="Run setup diagnostics..."
+          tooltip="Verify that Scala configuration is correct"/>
+
+        <visibility>
+          <and>
+            <or>
+              <objectState name="projectNature" value="org.scala-ide.sdt.core.scalanature"/>
+              <objectState name="projectNature" value="ch.epfl.lamp.sdt.core.scalanature"/>
+            </or>
+            <or>
+              <objectClass name="org.eclipse.jdt.core.IJavaProject"/>
+              <objectClass name="org.eclipse.jdt.core.IPackageFragment"/>
+            </or>
+          </and>
+        </visibility>
+  	</objectContribution>
+
   </extension>
 
   <extension
