--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -108,21 +108,31 @@
    </extension>
 
    <extension point = "org.eclipse.ui.actionSets">         
-     <actionSet id="org.scala-ide.sdt.ui.runDiag.actionSet"
-       label="Run Diagnostics"
+     <actionSet id="org.scala-ide.sdt.ui.scalaMenu.actionSet"
+       label="Scala Diagnostics" 
        visible="true">
        <menu id="org_scala-ide_sdt_ui_menu"
-         label="ActionSet.menu"
-         path="project/projEnd"> 
-         <separator name="slot1"/>
+         label="Scala"
+         path="additions"> 
+         <groupMarker name="diagnostics"/>
+         <groupMarker name="additions"/>
        </menu>
        <action id="org.scala-ide.sdt.ui.runDiag.action"
-         label="Run Scala Setup Diagnostics..."
-         menubarPath="project/projEnd"
+         definitionId="org.scala-ide.sdt.ui.runDiag.action"
+         label="Run Setup Diagnostics..."
+         menubarPath="org_scala-ide_sdt_ui_menu/diagnostics"
          tooltip="Verify that Scala configuration is correct"
          class="scala.tools.eclipse.diagnostic.RunDiagnosticAction"
          enablesFor="*">
        </action>
+       <action id="org.scala-ide.sdt.ui.reportBug.action"
+         definitionId="org.scala-ide.sdt.ui.reportBug.action"
+         label="Report a Bug..."
+         menubarPath="org_scala-ide_sdt_ui_menu/additions"
+         tooltip="Report a bug in the Scala Development Tools"
+         class="scala.tools.eclipse.diagnostic.RunDiagnosticAction"
+         enablesFor="*">
+       </action>       
      </actionSet>
    </extension>
 
