Commented-out context menu item for Scala diagnostics, since a) I was having issues running the same action from both the top level menu and a popup menu and b) we don't really need the same option in both places. Commented out rather than removed the extension from plugin.xml, since eventually the diagnostics should go back into the popup menu and not be in a top-level menu.

--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -553,7 +553,7 @@
          </visibility>
       </objectContribution>
 
-      <objectContribution
+<!---      <objectContribution
         id="org.scala-ide.sdt.ui.diagnostics"
         objectClass="org.eclipse.jdt.core.IJavaElement">
         <action
@@ -576,7 +576,7 @@
             </or>
           </and>
         </visibility>
-  	</objectContribution>
+  	</objectContribution> -->
   </extension>
     
 
