--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -79,6 +79,8 @@
             <contentTypeBinding contentTypeId="scala.tools.eclipse.scalaClass"/>
       </editor>
    </extension>
+   
+   <!-- Breakpoints for scala source/class editors -->
 
    <extension point="org.eclipse.ui.editorActions">
       <editorContribution
@@ -104,38 +106,8 @@
             id="org.eclipse.jdt.internal.ui.javaeditor.JavaSelectRulerAction">
          </action>
       </editorContribution>
-      
    </extension>
-
-   <extension point = "org.eclipse.ui.actionSets">         
-     <actionSet id="org.scala-ide.sdt.ui.scalaMenu.actionSet"
-       label="Scala Diagnostics" 
-       visible="true">
-       <menu id="org_scala-ide_sdt_ui_menu"
-         label="Scala"
-         path="additions"> 
-         <groupMarker name="diagnostics"/>
-         <groupMarker name="additions"/>
-       </menu>
-       <action id="org.scala-ide.sdt.ui.runDiag.action"
-         definitionId="org.scala-ide.sdt.ui.runDiag.action"
-         label="Run Setup Diagnostics..."
-         menubarPath="org_scala-ide_sdt_ui_menu/diagnostics"
-         tooltip="Verify that Scala configuration is correct"
-         class="scala.tools.eclipse.diagnostic.RunDiagnosticAction"
-         enablesFor="*">
-       </action>
-       <action id="org.scala-ide.sdt.ui.reportBug.action"
-         definitionId="org.scala-ide.sdt.ui.reportBug.action"
-         label="Report a Bug..."
-         menubarPath="org_scala-ide_sdt_ui_menu/additions"
-         tooltip="Report a bug in the Scala Development Tools"
-         class="scala.tools.eclipse.diagnostic.RunDiagnosticAction"
-         enablesFor="*">
-       </action>       
-     </actionSet>
-   </extension>
-
+   
    <extension point="org.eclipse.ui.editorActions">
       <editorContribution
          targetID="scala.tools.eclipse.ScalaClassFileEditor"
@@ -169,6 +141,45 @@
        <adapter type="org.eclipse.debug.ui.actions.IRunToLineTarget"/>
        <adapter type="org.eclipse.debug.ui.actions.IToggleBreakpointsTarget"/>
      </factory>
+   </extension>
+   <extension point="org.eclipse.core.runtime.adapters">
+     <factory
+       class="scala.tools.eclipse.ScalaRetargettableActionAdapterFactory"
+       adaptableType="scala.tools.eclipse.ScalaClassFileEditor">
+       <adapter type="org.eclipse.debug.ui.actions.IRunToLineTarget"/>
+       <adapter type="org.eclipse.debug.ui.actions.IToggleBreakpointsTarget"/>
+     </factory>
+   </extension>
+   <!-- end of extensions for breakpoints -->
+   
+
+   <extension point = "org.eclipse.ui.actionSets">         
+     <actionSet id="org.scala-ide.sdt.ui.scalaMenu.actionSet"
+       label="Scala Diagnostics" 
+       visible="true">
+       <menu id="org_scala-ide_sdt_ui_menu"
+         label="Scala"
+         path="additions"> 
+         <groupMarker name="diagnostics"/>
+         <groupMarker name="additions"/>
+       </menu>
+       <action id="org.scala-ide.sdt.ui.runDiag.action"
+         definitionId="org.scala-ide.sdt.ui.runDiag.action"
+         label="Run Setup Diagnostics..."
+         menubarPath="org_scala-ide_sdt_ui_menu/diagnostics"
+         tooltip="Verify that Scala configuration is correct"
+         class="scala.tools.eclipse.diagnostic.RunDiagnosticAction"
+         enablesFor="*">
+       </action>
+       <action id="org.scala-ide.sdt.ui.reportBug.action"
+         definitionId="org.scala-ide.sdt.ui.reportBug.action"
+         label="Report a Bug..."
+         menubarPath="org_scala-ide_sdt_ui_menu/additions"
+         tooltip="Report a bug in the Scala Development Tools"
+         class="scala.tools.eclipse.diagnostic.RunDiagnosticAction"
+         enablesFor="*">
+       </action>       
+     </actionSet>
    </extension>
 
    <extension
