--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -21,6 +21,10 @@
       <page class="scala.tools.eclipse.properties.ScalaPreferences"
             name="Scala"
             id="org.scala-ide.sdt.core.preferences"/>
+      <page class="scala.tools.eclipse.properties.SyntaxColouringPreferencePage"
+            category="org.scala-ide.sdt.core.preferences"
+            name="Syntax Coloring"
+            id="org.scala-ide.sdt.core.properties.SyntaxColouringPreferencePage"/>
       <page
             category="org.scala-ide.sdt.core.preferences"
             class="scala.tools.eclipse.properties.CompilerSettings"
@@ -641,6 +645,9 @@
   <extension
         id="org.scala-ide.sdt.core.preferences"
         point="org.eclipse.core.runtime.preferences">
+     <initializer
+           class="scala.tools.eclipse.properties.ColourPreferenceInitializer">
+     </initializer>    
      <initializer
            class="scala.tools.eclipse.properties.ScalaCompilerPreferenceInitializer">
      </initializer>
