Move classes that implement an action to scala.tools.eclipse.actions package. Remove some debugging code.

--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -164,19 +164,17 @@
          <groupMarker name="additions"/>
        </menu>
        <action id="org.scala-ide.sdt.ui.runDiag.action"
-         definitionId="org.scala-ide.sdt.ui.runDiag.action"
          label="Run Setup Diagnostics..."
          menubarPath="org_scala-ide_sdt_ui_menu/diagnostics"
          tooltip="Verify that Scala configuration is correct"
-         class="scala.tools.eclipse.diagnostic.RunDiagnosticAction"
+         class="scala.tools.eclipse.actions.RunDiagnosticAction"
          enablesFor="*">
        </action>
        <action id="org.scala-ide.sdt.ui.reportBug.action"
-         definitionId="org.scala-ide.sdt.ui.reportBug.action"
          label="Report a Bug..."
          menubarPath="org_scala-ide_sdt_ui_menu/additions"
          tooltip="Report a bug in the Scala Development Tools"
-         class="scala.tools.eclipse.diagnostic.RunDiagnosticAction"
+         class="scala.tools.eclipse.actions.RunDiagnosticAction"
          enablesFor="*">
        </action>       
      </actionSet>
@@ -490,7 +488,7 @@
       id="org.scala-ide.sdt.ui.interperter.start"
       objectClass="org.eclipse.jdt.core.IJavaElement">
       <action
-        class="scala.tools.eclipse.interpreter.Action"
+        class="scala.tools.eclipse.actions.InterpreterAction"
         enablesFor="1"
         menubarPath="org.scala-ide.sdt.core.popupMenu/content"
         icon="icons/full/etool16/scala_app.gif"
@@ -519,7 +517,7 @@
             nameFilter="*"
             id="org.scala-ide.sdt.core.natures.contribution1">
          <action
-               class="scala.tools.eclipse.ToggleScalaNatureAction"
+               class="scala.tools.eclipse.actions.ToggleScalaNatureAction"
                enablesFor="+"
                id="org.scala-ide.sdt.core.natures.ToggleNatureAction"
                label="Remove Scala Nature"
@@ -543,7 +541,7 @@
             nameFilter="*"
             id="org.scala-ide.sdt.core.natures.contribution2">
          <action
-               class="scala.tools.eclipse.ToggleScalaNatureAction"
+               class="scala.tools.eclipse.actions.ToggleScalaNatureAction"
                enablesFor="+"
                id="org.scala-ide.sdt.core.natures.ToggleNatureAction"
                icon="icons/full/etool16/newsprj_wiz.gif"
@@ -563,31 +561,6 @@
           </and>
          </visibility>
       </objectContribution>
-
-<!---      <objectContribution
-        id="org.scala-ide.sdt.ui.diagnostics"
-        objectClass="org.eclipse.jdt.core.IJavaElement">
-        <action
-          class="scala.tools.eclipse.diagnostic.RunDiagnosticAction"
-          enablesFor="1"
-          menubarPath="org.scala-ide.sdt.core.popupMenu/content"
-          id="org.scala-ide.sdt.ui.runDiag"
-          label="Run setup diagnostics..."
-          tooltip="Verify that Scala configuration is correct"/>
-
-        <visibility>
-          <and>
-            <or>
-              <objectState name="projectNature" value="org.scala-ide.sdt.core.scalanature"/>
-              <objectState name="projectNature" value="ch.epfl.lamp.sdt.core.scalanature"/>
-            </or>
-            <or>
-              <objectClass name="org.eclipse.jdt.core.IJavaProject"/>
-              <objectClass name="org.eclipse.jdt.core.IPackageFragment"/>
-            </or>
-          </and>
-        </visibility>
-  	</objectContribution> -->
   </extension>
     
 
