--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -332,10 +332,10 @@
    </extension>
    <extension point = "org.eclipse.debug.core.launchConfigurationTypes">
      <launchConfigurationType
-           delegate="org.eclipse.jdt.launching.JavaLaunchDelegate"
+           id="scala.application"
+           delegate="scala.tools.eclipse.launching.ScalaLaunchDelegate"
            delegateDescription="The Scala JVM Launcher supports running and debugging of local Scala applications compiled to the JVM"
            delegateName="Scala JVM Launcher"
-           id="scala.application"
            modes="run, debug"
            name="Scala Application"
            public="true"
