Update build env.sh and pom.xml so that a short git commit hash is appended to the end of the plugin version qualifier. Now the plugin version will look like  "1.0.0.201103171235-ce697c5".

--- a/org.scala-ide.build/pom.xml
+++ b/org.scala-ide.build/pom.xml
@@ -87,6 +87,17 @@
           </execution>
         </executions>
       </plugin>
+      <!-- for setting a better qualifier -->
+      <plugin>
+        <groupId>org.sonatype.tycho</groupId>
+        <artifactId>maven-osgi-packaging-plugin</artifactId>
+        <version>${tycho.version}</version>
+        <configuration>
+          <format>yyyyMMddHHmm'-${git.hash}'</format> 
+          <archiveSite>true</archiveSite>
+        </configuration>
+      </plugin>    
+  
     </plugins>
   </build>
   <repositories>
