--- a/org.scala-ide.sdt.editor.text/.settings/org.eclipse.jdt.core.prefs
+++ b/org.scala-ide.sdt.editor.text/.settings/org.eclipse.jdt.core.prefs
@@ -1,8 +1,12 @@
-#Sun Jan 30 15:54:36 CET 2011
+#Sat Mar 19 10:43:40 CET 2011
 eclipse.preferences.version=1
 org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.6
+org.eclipse.jdt.core.compiler.codegen.unusedLocal=preserve
 org.eclipse.jdt.core.compiler.compliance=1.6
+org.eclipse.jdt.core.compiler.debug.lineNumber=generate
+org.eclipse.jdt.core.compiler.debug.localVariable=generate
+org.eclipse.jdt.core.compiler.debug.sourceFile=generate
 org.eclipse.jdt.core.compiler.problem.assertIdentifier=error
 org.eclipse.jdt.core.compiler.problem.enumIdentifier=error
 org.eclipse.jdt.core.compiler.source=1.6
