--- a/org.scala-ide.sdt.core/about.ini
+++ b/org.scala-ide.sdt.core/about.ini
@@ -1,7 +1,11 @@
 # Property "featureImage" contains path to feature image (32x32)
 featureImage=about.png
 aboutText=The Scala IDE for Eclipse\n\
+(c) LAMP/EPFL and Scala Solutions\n\
 \n\
 The Scala IDE for Eclipse provides the tools needed to \n\
 to build Scala programs on the Eclipse Platform.\n\
-Visit http://scala-ide.org/
+Visit http://scala-ide.org/\n\n\
+Scala Solutions Team: Iulian Dragos, Donna Malayeri, Martin Odersky, Hubert Plocinicak, Eugene Vigdorchik\n\
+ScalaIDE.org organizer: Miles Sabin\n\
+Many thanks to David Bernard, Matt Russell, Mirko Stocker, Joshua Suereth, and all other contributors.\n\
